--- a/Parcial3/proyectofinal/index.html
+++ b/Parcial3/proyectofinal/index.html
@@ -81,7 +81,7 @@
                 <img src="imagenes/consulta 9.png" alt="imagen10">
             </div>
             <div class="col">
-                <center><br><br><h3 class="card"></h3>>SELECT <br>
+                <center><br><br><h3 class="card"></h3>SELECT <br>
                     al.idAlumno, <br>
                     al.nombre AS nombre_alumno, <br>
                     al.apellido1 AS apellido1_alumno, <br>
