--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="Parcial1/practicaparcial1.html">Parcial 1.</a></li>
                       <li><a class="dropdown-item" href="Parcial2/portafolio-parcial2.html">Parcial 2.</a></li>
+                      <li><a class="dropdown-item" href="Parcial3/portafolio-parcial3.html">Parcial 3.</a></li>
                       <li><a class="dropdown-item" href="Parcial3/proyectofinal/index.html">Proyecto Final</a></li>
                     </ul>
                   </li>
