portafolio-parcial3.html

--- a/Parcial3/portafolio-parcial3.html
+++ b/Parcial3/portafolio-parcial3.html
@@ -57,12 +57,12 @@
               </tbody>
               <tbody>
                 <td>Practica 6</td>
-                <td>Formularios en HTML - </td>
+                <td>Insertar información - Base de datos</td>
                 <td><a href="Practica6.sql">Visitar</a></td>
               </tbody>
               <tbody>
                 <td>Practica 7</td>
-                <td>Posicionamiento en HTML</td>
+                <td>Insertar informacion - Base de datos</td>
                 <td><a href="Practica7.sql">Visitar</a></td>
               </tbody>
               <tbody>
