--- a/BaseDeDatosWeb/Parcial1/practica1.html
+++ b/BaseDeDatosWeb/Parcial1/practica1.html
@@ -23,6 +23,12 @@
 
         <!-- Agregar otros 2 campos -->
 
+        <label for="">Color:</label>
+        <input type="text" name="color" required><br><br>
+
+        <label for="">Musica:</label>
+        <input type="text" name="musica" required><br><br>
+
         <input type="submit" value="Enviar datos">
     </form>
 </body>
