--- a/BaseDeDatosWeb/Parcial2/practica9.html
+++ b/BaseDeDatosWeb/Parcial2/practica9.html
@@ -11,5 +11,20 @@
     <h1>La loteria</h1><hr>
     <div id="carta_activa"></div>
     <button id="dar_carta">Dar carta</button>
+
+    <div class="conainer">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="row" id="carta1" style="border: 3px solid black;"> 
+                    
+                </div>
+            </div>
+            <div class="col-sm-6" id="carta2" class="card">
+                <div class="row" id="carta2">
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
